6sem/yapis_laba1_6sem/src/main/java/com/misha/gen/PollaMParser.java
// Generated from C:/Users/миша/IdeaProjectsM/YapisParser/src/main/resources\PollaM.g4 by ANTLR 4.9.2
package com.misha.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PollaMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, DEF=2, VOID=3, IF=4, ELSE=5, WHILE=6, FOR=7, RETURN=8, FROM=9, 
		SET=10, ELEMENT=11, VAR=12, PRINT=13, SIZE=14, CLEAR=15, ADD=16, REMOVE=17, 
		ID=18, STRING=19, NUMBER=20, COLON=21, SEMICOLON=22, DOT=23, COMMA=24, 
		ASSIGN=25, UNION=26, DIFERENCE=27, INTERSECTION=28, SYMMETRIC_DIFFERENCE=29, 
		EQUALS=30, NOT_EQUALS=31, GT_EQ=32, LT_EQ=33, GT=34, LT=35, OPEN_BRACKET=36, 
		CLOSE_BRACKET=37, OPEN_CURLY_BRACKET=38, CLOSE_CURLY_BRACKET=39, WS=40;
	public static final int
		RULE_program = 0, RULE_type = 1, RULE_typeIdPart = 2, RULE_typeVarPart = 3, 
		RULE_mainDef = 4, RULE_functionDefReturn = 5, RULE_functionDefNonReturn = 6, 
		RULE_functionBodyWithoutReturn = 7, RULE_emptRet = 8, RULE_functionBodyWithReturn = 9, 
		RULE_functionDefParameters = 10, RULE_contentLine = 11, RULE_operators = 12, 
		RULE_variableDeclaration = 13, RULE_variableDeclarationWithAssignment = 14, 
		RULE_valueAssignment = 15, RULE_typeConvertion = 16, RULE_functionCall = 17, 
		RULE_operationsWithSets = 18, RULE_changeSetOperation = 19, RULE_unionOperation = 20, 
		RULE_differenceOperation = 21, RULE_intersectionOperation = 22, RULE_symmetricDifferenceOperation = 23, 
		RULE_booleanOperations = 24, RULE_ifBlock = 25, RULE_forBlock = 26, RULE_whileBlock = 27, 
		RULE_operatorBody = 28, RULE_printCall = 29, RULE_sizeCall = 30, RULE_clearCall = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "type", "typeIdPart", "typeVarPart", "mainDef", "functionDefReturn", 
			"functionDefNonReturn", "functionBodyWithoutReturn", "emptRet", "functionBodyWithReturn", 
			"functionDefParameters", "contentLine", "operators", "variableDeclaration", 
			"variableDeclarationWithAssignment", "valueAssignment", "typeConvertion", 
			"functionCall", "operationsWithSets", "changeSetOperation", "unionOperation", 
			"differenceOperation", "intersectionOperation", "symmetricDifferenceOperation", 
			"booleanOperations", "ifBlock", "forBlock", "whileBlock", "operatorBody", 
			"printCall", "sizeCall", "clearCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'def'", "'void'", "'if'", "'else'", "'while'", "'for'", 
			"'return'", "'from'", "'set'", "'element'", "'var'", "'print'", "'size'", 
			"'clear'", "'add'", "'remove'", null, null, null, "':'", "';'", "'.'", 
			"','", "'='", "'+'", "'-'", "'&'", "'^'", "'=='", "'!='", "'>='", "'<='", 
			"'>'", "'<'", "'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MAIN", "DEF", "VOID", "IF", "ELSE", "WHILE", "FOR", "RETURN", 
			"FROM", "SET", "ELEMENT", "VAR", "PRINT", "SIZE", "CLEAR", "ADD", "REMOVE", 
			"ID", "STRING", "NUMBER", "COLON", "SEMICOLON", "DOT", "COMMA", "ASSIGN", 
			"UNION", "DIFERENCE", "INTERSECTION", "SYMMETRIC_DIFFERENCE", "EQUALS", 
			"NOT_EQUALS", "GT_EQ", "LT_EQ", "GT", "LT", "OPEN_BRACKET", "CLOSE_BRACKET", 
			"OPEN_CURLY_BRACKET", "CLOSE_CURLY_BRACKET", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PollaM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PollaMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public MainDefContext mainDef() {
			return getRuleContext(MainDefContext.class,0);
		}
		public List<FunctionDefReturnContext> functionDefReturn() {
			return getRuleContexts(FunctionDefReturnContext.class);
		}
		public FunctionDefReturnContext functionDefReturn(int i) {
			return getRuleContext(FunctionDefReturnContext.class,i);
		}
		public List<FunctionDefNonReturnContext> functionDefNonReturn() {
			return getRuleContexts(FunctionDefNonReturnContext.class);
		}
		public FunctionDefNonReturnContext functionDefNonReturn(int i) {
			return getRuleContext(FunctionDefNonReturnContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PollaMVisitor ) return ((PollaMVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(66);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(64);
						functionDefReturn();
						}
						break;
					case 2:
						{
						setState(65);
						functionDefNonReturn();
						}
						break;
					}
					} 
				}
				setState(70);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(71);
			mainDef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(PollaMParser.SET, 0); }
		public TerminalNode ELEMENT() { return getToken(PollaMParser.ELEMENT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PollaMVisitor ) return ((PollaMVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_la = _input.LA(1);
			if ( !(_la==SET || _la==ELEMENT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeIdPartContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(PollaMParser.ID, 0); }
		public TypeIdPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeIdPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).enterTypeIdPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).exitTypeIdPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PollaMVisitor ) return ((PollaMVisitor<? extends T>)visitor).visitTypeIdPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeIdPartContext typeIdPart() throws RecognitionException {
		TypeIdPartContext _localctx = new TypeIdPartContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeIdPart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			type();
			setState(76);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeVarPartContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode VAR() { return getToken(PollaMParser.VAR, 0); }
		public TypeVarPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeVarPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).enterTypeVarPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).exitTypeVarPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PollaMVisitor ) return ((PollaMVisitor<? extends T>)visitor).visitTypeVarPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeVarPartContext typeVarPart() throws RecognitionException {
		TypeVarPartContext _localctx = new TypeVarPartContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeVarPart);
		try {
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET:
			case ELEMENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				type();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				match(VAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainDefContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(PollaMParser.DEF, 0); }
		public TerminalNode VOID() { return getToken(PollaMParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(PollaMParser.MAIN, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(PollaMParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(PollaMParser.CLOSE_BRACKET, 0); }
		public FunctionBodyWithoutReturnContext functionBodyWithoutReturn() {
			return getRuleContext(FunctionBodyWithoutReturnContext.class,0);
		}
		public MainDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).enterMainDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).exitMainDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PollaMVisitor ) return ((PollaMVisitor<? extends T>)visitor).visitMainDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainDefContext mainDef() throws RecognitionException {
		MainDefContext _localctx = new MainDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mainDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(DEF);
			setState(83);
			match(VOID);
			setState(84);
			match(MAIN);
			setState(85);
			match(OPEN_BRACKET);
			setState(86);
			match(CLOSE_BRACKET);
			setState(87);
			functionBodyWithoutReturn();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefReturnContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(PollaMParser.DEF, 0); }
		public TypeIdPartContext typeIdPart() {
			return getRuleContext(TypeIdPartContext.class,0);
		}
		public TerminalNode OPEN_BRACKET() { return getToken(PollaMParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(PollaMParser.CLOSE_BRACKET, 0); }
		public FunctionBodyWithReturnContext functionBodyWithReturn() {
			return getRuleContext(FunctionBodyWithReturnContext.class,0);
		}
		public FunctionDefParametersContext functionDefParameters() {
			return getRuleContext(FunctionDefParametersContext.class,0);
		}
		public FunctionDefReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefReturn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).enterFunctionDefReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).exitFunctionDefReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PollaMVisitor ) return ((PollaMVisitor<? extends T>)visitor).visitFunctionDefReturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefReturnContext functionDefReturn() throws RecognitionException {
		FunctionDefReturnContext _localctx = new FunctionDefReturnContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionDefReturn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(DEF);
			setState(90);
			typeIdPart();
			setState(91);
			match(OPEN_BRACKET);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SET || _la==ELEMENT) {
				{
				setState(92);
				functionDefParameters();
				}
			}

			setState(95);
			match(CLOSE_BRACKET);
			setState(96);
			functionBodyWithReturn();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefNonReturnContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(PollaMParser.DEF, 0); }
		public TerminalNode VOID() { return getToken(PollaMParser.VOID, 0); }
		public TerminalNode ID() { return getToken(PollaMParser.ID, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(PollaMParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(PollaMParser.CLOSE_BRACKET, 0); }
		public FunctionBodyWithoutReturnContext functionBodyWithoutReturn() {
			return getRuleContext(FunctionBodyWithoutReturnContext.class,0);
		}
		public FunctionDefParametersContext functionDefParameters() {
			return getRuleContext(FunctionDefParametersContext.class,0);
		}
		public FunctionDefNonReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefNonReturn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).enterFunctionDefNonReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).exitFunctionDefNonReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PollaMVisitor ) return ((PollaMVisitor<? extends T>)visitor).visitFunctionDefNonReturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefNonReturnContext functionDefNonReturn() throws RecognitionException {
		FunctionDefNonReturnContext _localctx = new FunctionDefNonReturnContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionDefNonReturn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(DEF);
			setState(99);
			match(VOID);
			setState(100);
			match(ID);
			setState(101);
			match(OPEN_BRACKET);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SET || _la==ELEMENT) {
				{
				setState(102);
				functionDefParameters();
				}
			}

			setState(105);
			match(CLOSE_BRACKET);
			setState(106);
			functionBodyWithoutReturn();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBodyWithoutReturnContext extends ParserRuleContext {
		public EmptRetContext emptRet() {
			return getRuleContext(EmptRetContext.class,0);
		}
		public List<OperatorsContext> operators() {
			return getRuleContexts(OperatorsContext.class);
		}
		public OperatorsContext operators(int i) {
			return getRuleContext(OperatorsContext.class,i);
		}
		public List<ContentLineContext> contentLine() {
			return getRuleContexts(ContentLineContext.class);
		}
		public ContentLineContext contentLine(int i) {
			return getRuleContext(ContentLineContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(PollaMParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PollaMParser.SEMICOLON, i);
		}
		public FunctionBodyWithoutReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBodyWithoutReturn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).enterFunctionBodyWithoutReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).exitFunctionBodyWithoutReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PollaMVisitor ) return ((PollaMVisitor<? extends T>)visitor).visitFunctionBodyWithoutReturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionBodyWithoutReturnContext functionBodyWithoutReturn() throws RecognitionException {
		FunctionBodyWithoutReturnContext _localctx = new FunctionBodyWithoutReturnContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionBodyWithoutReturn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << SET) | (1L << ELEMENT) | (1L << VAR) | (1L << PRINT) | (1L << SIZE) | (1L << CLEAR) | (1L << ID) | (1L << NUMBER) | (1L << OPEN_BRACKET))) != 0)) {
				{
				setState(112);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SET:
				case ELEMENT:
				case VAR:
				case PRINT:
				case SIZE:
				case CLEAR:
				case ID:
				case NUMBER:
				case OPEN_BRACKET:
					{
					{
					setState(108);
					contentLine();
					setState(109);
					match(SEMICOLON);
					}
					}
					break;
				case IF:
				case WHILE:
				case FOR:
					{
					setState(111);
					operators();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			emptRet();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EmptRetContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(PollaMParser.RETURN, 0); }
		public TerminalNode SEMICOLON() { return getToken(PollaMParser.SEMICOLON, 0); }
		public EmptRetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_emptRet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).enterEmptRet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).exitEmptRet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PollaMVisitor ) return ((PollaMVisitor<? extends T>)visitor).visitEmptRet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EmptRetContext emptRet() throws RecognitionException {
		EmptRetContext _localctx = new EmptRetContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_emptRet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(RETURN);
			setState(120);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBodyWithReturnContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(PollaMParser.RETURN, 0); }
		public TerminalNode ID() { return getToken(PollaMParser.ID, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(PollaMParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PollaMParser.SEMICOLON, i);
		}
		public List<OperatorsContext> operators() {
			return getRuleContexts(OperatorsContext.class);
		}
		public OperatorsContext operators(int i) {
			return getRuleContext(OperatorsContext.class,i);
		}
		public List<ContentLineContext> contentLine() {
			return getRuleContexts(ContentLineContext.class);
		}
		public ContentLineContext contentLine(int i) {
			return getRuleContext(ContentLineContext.class,i);
		}
		public FunctionBodyWithReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBodyWithReturn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).enterFunctionBodyWithReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PollaMListener ) ((PollaMListener)listener).exitFunctionBodyWithReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PollaMVisitor ) return ((PollaMVisitor<? extends T>)visitor).visitFunctionBodyWithReturn(this);
			else return visitor.visitChildren(this);
		}
	}
